# CoffeeScales

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-kits.json  cmake-variants.yaml  firmware.cmake  st_nucleo_l4.cfg  testing.cmake
3d/Load cell test bed/: Load cell test bed v1.f3d
BSP/: .mxproject
BSP/Src/: main.c
docs/: OLED product page.html
docs/OLED product page_files/: ae-header.css  ae-header.js.download  async.js.download  async~store-info.js.download  awsc.js.download  comet-pro-shipto-bLCM2~feedback~ship-to-setting.js.download  comet-pro-shipto-bLCM2~login~scene-login~scene-login-service~ship-to-setting.js.download  comet-pro-shipto-bLCM2~login~ship-to-setting.js.download  comet-pro-shipto-bLCM2~maddress~ship-to-setting.js.download  eg.js(1).download  en_US-js-05ni3.js.download  extend.css  extend.js.download  gallery-9g91h~list-88mY4~rcmd-9jQqC~slider-kTGCl~waterfall-VLHdM.css  gallery-9g91h~list-88mY4~rcmd-9jQqC~slider-kTGCl~waterfall-VLHdM.js.download  gep-sdk.js.download  gtm.js.download  home.js.download  index-new.css  index.js(1).download  index.js(5).download  js  js(1)  (+20 more)
source/: application.cpp
source/Application/: Application.cpp  Application.h  CMakeLists.txt  Instantiation.cpp  Instantiation.h  TerminalCommandTest.cpp  TerminalCommandTest.h  main.cpp
source/Display/: CMakeLists.txt  DisplayCommand.cpp  DisplayCommand.h  DisplayManager.cpp  DisplayManager.h  DisplayTerminalCommands.h  UgfxWrapper.cpp  UgfxWrapper.h  WeightDisplayItem.cpp  WeightDisplayItem.h
source/Display/DisplayItems/: PourRateDisplayItem.cpp  PourRateDisplayItem.h  TimeDisplayItem.cpp  TimeDisplayItem.h  WeightDisplayItem.cpp  WeightDisplayItem.h
source/Display/ugfx/: CMakeLists.txt  board_SSD1306.cpp  gfxconf.h
source/Drivers/: ButtonDriver.cpp  ButtonDriver.h  CMakeLists.txt  EepromDriver.cpp  EepromDriver.h  HX711Driver.cpp  HX711Driver.h  TareButtonDriver.cpp  TareButtonDriver.h  Utilities.h
source/HalWrapper/: ButtonGpio.cpp  ButtonGpio.h  ButtonMapping.h  CMakeLists.txt  Delay.cpp  Delay.h  DelayInterface.h  DelayTimer.cpp  DelayTimer.h  DisplayGpio.cpp  DisplayGpio.h  HX711.cpp  HX711.h  HX711Gpio.cpp  HX711Gpio.h  HX711GpioInterface.h  HalErrorHandler.c  HalErrorHandler.cpp  HalErrorHandler.h  HalInit.cpp  HalInit.h  HalMsp.cpp  HalMsp.h  InterruptTimerGpio.cpp  InterruptTimerGpio.h  Spi.cpp  Spi.h  System.cpp  System.h  TareButtonGpio.cpp  TareButtonGpio.h  Time.cpp  Time.h  TimerButtonGpio.cpp  TimerButtonGpio.h  Uart.cpp  Uart.h  UartInterface.h  Utilities.h
source/Interfaces/: AdcDriverInterface.h  BrewTimerInterface.h  ButtonDriverInterface.h  ButtonGpioInterface.h  ButtonPressCallbackInterface.h  CMakeLists.txt  DelayInterface.h  DisplayGpioInterface.h  DisplayInterface.h  DisplayItemInterface.h  DisplayManagerInterface.h  EepromInterface.h  ExternalInterruptCallbackInterface.h  ExternalInterruptCallbackRegisterableInterface.h  GpioInterface.h  GpioInterruptCallbackInterface.h  HX711DriverInterface.h  PersistentMemoryInterface.h  PourRateInterface.h  PourRateUpdateCallbackInterface.h  ReceiveInterruptCallbackInterface.h  ScalesInterface.h  ScalesMemoryItemInterface.h  SpiInterface.h  SystemInterface.h  TerminalCallbackInterface.h  TerminalInterface.h  TimeInterface.h  TimerAutoStartCallbackInterface.h  TimerAutoStartInterface.h  TimerIncrementCallbackInterface.h  UartInterface.h  WeightReadingCallbackInterface.h
source/STM32L4/: .mxproject  BSP.ioc  CMakeLists.txt  Makefile
source/STM32L4/BSP/: BSP.ioc  Makefile
source/STM32L4/BSP/Src/: main.c
source/STM32L4/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_spi.h
source/STM32L4/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_spi.c
source/STM32L4/Inc/: main.h  stm32l4xx_it.h
source/STM32L4/Src/: gpio.c  main.c  spi.c  stm32l4xx_it.c  tim.c
source/Terminal/: CMakeLists.txt  CommandArgs.cpp  CommandArgs.h  GenericTerminalCommands.h  Terminal.cpp  Terminal.h  TerminalInterface.h
source/Tests/Display/: CMakeLists.txt  tests.DisplayCommand.cpp  tests.DisplayManager.cpp  tests.PourRateDisplayItem.cpp  tests.TimeDisplayItem.cpp  tests.WeightDisplayItem.cpp
source/Tests/Doubles/Display/: CMakeLists.txt  DisplayItemSpy.cpp  DisplayItemSpy.h  DisplayManagerSpy.cpp  DisplayManagerSpy.h  DisplaySpy.cpp  DisplaySpy.h
source/Tests/Doubles/Drivers/: AdcSpy.cpp  AdcSpy.h  ButtonDriverSpy.cpp  ButtonDriverSpy.h  ButtonPressCallbackSpy.cpp  ButtonPressCallbackSpy.h  CMakeLists.txt  EepromDriverSpy.cpp  EepromDriverSpy.h
source/Tests/Doubles/HalWrapper/: ButtonGpioSpy.cpp  ButtonGpioSpy.h  CMakeLists.txt  ExternalInterruptCallbackRegisterableSpy.cpp  ExternalInterruptCallbackRegisterableSpy.h  GpioSpy.cpp  GpioSpy.h  SpiSpy.cpp  SpiSpy.h  SystemMock.cpp  SystemMock.h  TimeSpy.cpp  TimeSpy.h  UartSpy.cpp  UartSpy.h
source/Tests/Doubles/Terminal/: CMakeLists.txt  TerminalCallbackSpy.cpp  TerminalCallbackSpy.h  TerminalSpy.cpp  TerminalSpy.h
source/Tests/Doubles/Time/: BrewTimerSpy.cpp  BrewTimerSpy.h  CMakeLists.txt  TimerAutoStartCallbackSpy.cpp  TimerAutoStartCallbackSpy.h  TimerAutoStartSpy.cpp  TimerAutoStartSpy.h  TimerIncrementCallbackSpy.cpp  TimerIncrementCallbackSpy.h
source/Tests/Doubles/Weight/: CMakeLists.txt  PourRateSpy.cpp  PourRateSpy.h  PourRateUpdateCallbackSpy.cpp  PourRateUpdateCallbackSpy.h  ScalesMemoryItemSpy.cpp  ScalesMemoryItemSpy.h  ScalesSpy.cpp  ScalesSpy.h  WeightReadingCallbackSpy.cpp  WeightReadingCallbackSpy.h
source/Tests/Drivers/: CMakeLists.txt  tests.ButtonDriver.cpp  tests.EepromDriver.cpp  tests.HX711Driver.cpp  tests.Utilities.cpp
source/Tests/Terminal/: CMakeLists.txt  tests.Terminal.cpp
source/Tests/Time/: CMakeLists.txt  tests.BrewTimer.cpp  tests.TimeCommand.cpp  tests.TimerAutoStart.cpp
source/Tests/Weight/: CMakeLists.txt  tests.PourRate.cpp  tests.Scales.cpp  tests.ScalesCommand.cpp  tests.ScalesMemoryItem.cpp
source/Weight/: CMakeLists.txt  PourRate.cpp  PourRate.h  Scales.cpp  Scales.h  ScalesCommand.cpp  ScalesCommand.h  ScalesMemoryItem.cpp  ScalesMemoryItem.h  ScalesTerminalCommands.h  ScalesTerminalMessages.h
(+14 files in other folders)
